test/types/type_variables/diten/typeTupleIdxExtraArgs.good
typeTupleIdxExtraArgs.chpl:3: error: too many arguments to type index expression
