test/types/type_variables/diten/typeTupleIdxExtraArgs.chpl
type t = (int, real, string);

writeln(t(2, "hello", 3.14, int):string);
